[NMMA-109] Fix speakers grid from wrapping too early on ie11

--- a/docroot/themes/custom/boatshow/sass/pages/_speakers.scss
+++ b/docroot/themes/custom/boatshow/sass/pages/_speakers.scss
@@ -12,18 +12,22 @@ $speakers-grid-spacing: susy-gutter(); //20px?
   }
 
   .view-content .views-row {
-    flex: 100% 0;
+    flex-basis: 100%;
+    flex-grow: 1;
     box-sizing: border-box;
-    padding:0 $speakers-grid-spacing / 2 $speakers-grid-spacing;
+    padding: 0 $speakers-grid-spacing / 2 $speakers-grid-spacing;
 
     @media (min-width: $screen-sm) {
-      flex-basis: (100% / 2);
+      flex-basis: 45%;
+      max-width: (100% / 2);
     }
     @media (min-width: $screen-md) {
-      flex-basis: (100% / 3);
+      flex-basis: 30%;
+      max-width: (100% / 3);
     }
     @media (min-width: $screen-lg) {
-      flex-basis: (100% / 4);
+      flex-basis: 20%;
+      max-width: (100% / 4);
     }
   }
 }
